--- a/js/js-5.html
+++ b/js/js-5.html
@@ -5,28 +5,33 @@
   <title>Hatena-Intern-Exercise2013 : JavaScript</title>
   <link rel="stylesheet" href="js-5.css" />
 </head>
+
 <body>
-  <section>
-    <p>2chburauza tukurimasita</p>
+<div id="wrapper">
+  
+  <div id="header">
+    <h3>2chburauza tukurimasita</h3>
+    <p></p>
 
-    <div id="header">
-      thread url: <input type="url" id="url-input" />
-      <input value="GO!" type="button" id="draw-url" />
-      <br>
-      <a onclick>input</a>
-    </div>
-
-    <div id="dat-textarea">
-      <textarea id="dat-input" cols="64" rows="10"></textarea>
-      <input value="GO!" type="button" id="draw-dat" />
-    </div>
-
-    <div id="thread">
-    </div>
+    input thread url:<br>
+    <input type="url" id="url-input" value="http://anago.2ch.net/test/read.cgi/gline/1373774042/" />
     
-    
-  </section>
-  <script src="lib/jquery-2.0.3.min.js"></script>
-  <script src="js-5.js"></script>
+    <br><br>
+    or input raw dat:<br>
+    <textarea id="dat-input" cols="64" rows="10"></textarea>
+
+    <input value="GO!" type="button" id="get-thread" />
+
+  </div>
+  
+
+  
+  <div id="thread"></div>
+  
+</div>
+
+<script src="lib/jquery-2.0.3.min.js"></script>
+<script src="js-5.js"></script>
+
 </body>
 </html>
