--- a/js/test.html
+++ b/js/test.html
@@ -6,10 +6,12 @@
   <link rel="stylesheet" href="lib/qunit-1.12.0.css">
 </head>
 <body>
-  <div id="qunit"></div>
+  <div id="qunit"></div><script src="lib/jquery-2.0.3.min.js"></script>
   <div id="qunit-fixture"></div>
   <script src="lib/qunit-1.12.0.js"></script>
+  <script src="lib/jquery-2.0.3.min.js"></script>
   <script src="main.js"></script>
+  <script src="js-5.js"></script>  
   <script src="test.js"></script>
 <script id="testdata" type="text/plain">
 </script>
