--- a/js/js-5.html
+++ b/js/js-5.html
@@ -13,7 +13,8 @@
     <h3>2chブラウザ作りました</h3>
     <p>
       スレ読むだけです<br>
-      "js/cgi-bin/load.pl"を使って2chのdatファイルを読むのでperlないと動きません
+      "js/cgi-bin/load.pl"を使って2chのdatファイルを読むのでperlないと動きません<br>
+      そして重い
     </p>
     <p>
       テキストデータからHTML文書を…っていう、うーんtwitter? はてぶ? ニコニコのコメ？
